@@ -4,6 +4,9 @@ Drivers:
 * HI::Conll
 * DE::Smor
 
+Interface:
+* FeatureStructure has new method set_other_subfeature().
+
 
 
 2.025     2014-11-24 17:43:29+01:00 Europe/Prague
